--- a/libft/Makefile
+++ b/libft/Makefile
@@ -37,6 +37,7 @@ SRC_FILES := \
 	ft_strjoin.c \
 	ft_strtrim.c \
 	ft_split.c \
+	ft_str_threejoin.c \
 	ft_itoa.c \
 	ft_strmapi.c \
 	ft_striteri.c \
